--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,12 +62,12 @@ http {
 	ssl_prefer_server_ciphers on;
 
 	# Logging Settings
-	log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+	log_format default '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-	access_log /var/log/nginx/access.log main;
-	error_log /var/log/nginx/error.log main;
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
 
 	# Gzip
 	gzip on;
