--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: nginx:1.20.2
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-      - ./nginx/conf.d/default.conf:/nginx/conf.d/default.conf
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./www/default/error.html:/usr/share/nginx/html/error.html:ro
       - ./www/default/network.html:/usr/share/nginx/html/network.html:ro
       - ./www/nginx/index.html:/usr/share/nginx/html/index.html:ro
