--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -131,7 +131,7 @@ http {
 		407 'The request has not been applied because it lacks valid authentication credentials for a proxy server that is between the browser and the server that can access the requested resource';
 		408 'The server would like to shut down this connection';
 		409 'Request conflict with the current state of the target resource';
-		410 'The requested content has been permanently deleted from server.';
+		410 'The requested content has been permanently deleted from server';
 		411 'The server rejected the request because the Content-Length header field is not defined and the server requires it';
 		412 'The client has indicated preconditions in its headers which the server does not meet';
 		413 'The request entity is larger than limits defined by server';
