--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,4 +23,4 @@ services:
       resources:
         limits:
           cpus: '3.00' # 1 = core
-          memory: 5G # 1 1G = 1GB ram
+          memory: '5G' # 1 1G = 1GB ram
