--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,12 @@ services:
     restart: unless-stopped
     cap_drop:
       - "ALL"
+    cap_add:
+      #- "CAP_CHOWN"
+      #- "CAP_DAC_OVERRIDE"
+      - "CAP_SETGID"
+      - "CAP_SETUID"
+      - "CAP_NET_BIND_SERVICE"
     read_only: true
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
