--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,15 @@ services:
     read_only: true
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf:rw
       - ./www/default/error.html:/usr/share/nginx/html/error.html:ro
       - ./www/default/network.html:/usr/share/nginx/html/network.html:ro
       - ./www/nginx/index.html:/usr/share/nginx/html/index.html:ro
       - ./www/nginx/security.txt:/usr/share/nginx/html/secuity.txt:ro
       - ./www/nginx/robots.txt:/usr/share/nginx/html/robots.txt:ro
+      - ./logs:/var/log/nginx:rw
+      - ./tmp/cache:/var/cache/nginx:rw
+      - ./tmp/run:/var/run/nginx:rw
     tmpfs:
       - "/tmp:exec,uid=999,gid=999"
     logging: 
