--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,7 +1,7 @@
 #load_module modules/ngx_http_modsecurity_module.so;
 user nginx;
 worker_processes auto;
-pid /run/nginx.pid;
+pid /run/nginx/nginx.pid;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
